edited index.html and fixed layout problems

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,6 +5,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 footer .horizontal {
   width: 100%;
